--- a/static/styles.css
+++ b/static/styles.css
@@ -41,7 +41,7 @@ button:hover {
     width: 100%;
     padding: 15px;
     background-color: #823E56;
-    color: white;
+    color: #93254B;
     font-size: 16px;
     cursor: pointer;
 }
