--- a/static/styles.css
+++ b/static/styles.css
@@ -1,7 +1,7 @@
 /* Set background image for the entire page */
 body {
     font-family: Arial, sans-serif;
-    background-color: #c39cd8;
+    background-color: #823E56;
     margin: 0;
     padding: 0;
 }
